Fix gap between menu and sliders

--- a/css/slider.css
+++ b/css/slider.css
@@ -72,7 +72,7 @@ height:338px;
 position:relative;
 }
 div#slide-holder div#slide-runner{
-top:38px;
+top:35px;
 left:0px;
 width:960px;
 height:300px;
